[gd_scene load_steps=17 format=3 uid="uid://c23oxptpagj1t"]

[ext_resource type="Script" path="res://Scene/scene_bibliotheque.gd" id="1_4xkle"]
[ext_resource type="PackedScene" uid="uid://be8qvy6ws6i0m" path="res://Carte/CarteScene/bibliotheque.tscn" id="1_pdaoj"]
[ext_resource type="PackedScene" uid="uid://i0y3uc5jfcuj" path="res://UI/menu_pause.tscn" id="2_bqs4w"]
[ext_resource type="PackedScene" uid="uid://tki2apulyx4e" path="res://Joueur/joueur.tscn" id="3_6onxo"]
[ext_resource type="PackedScene" uid="uid://blychabk2ucx7" path="res://Personne/ennemie_un.tscn" id="5_hnnj2"]
[ext_resource type="PackedScene" uid="uid://c81mpte26ou7w" path="res://UI/tuile_boite_de_texte.tscn" id="6_hl0ms"]
[ext_resource type="Texture2D" uid="uid://idnl1hauh4uk" path="res://UI/Keyboard Letters and Symbols.png" id="6_yhl5l"]
[ext_resource type="Texture2D" uid="uid://ghodvn6lgtdd" path="res://UI/image/iconCerveau.png" id="7_850wn"]
[ext_resource type="Texture2D" uid="uid://dcq5j6taqvth8" path="res://UI/sprite_0.png" id="8_60xhm"]
[ext_resource type="PackedScene" uid="uid://c50yeq1k8yita" path="res://UI/boite_de_textes.tscn" id="10_grhnv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nqmja"]
size = Vector2(17.25, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lvqbf"]
size = Vector2(14.5, 50)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t3n6p"]
size = Vector2(8.75, 55)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nuhb8"]
size = Vector2(52, 50)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0vmct"]
size = Vector2(17, 51)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g045e"]
size = Vector2(76, 17.5)

[node name="SceneBibliotheque" type="Node2D"]
script = ExtResource("1_4xkle")

[node name="Node2D" parent="." instance=ExtResource("1_pdaoj")]
position = Vector2(23, 27)

[node name="MenuPause" parent="." instance=ExtResource("2_bqs4w")]
position = Vector2(5, -14)

[node name="EnnemieUn" parent="." instance=ExtResource("5_hnnj2")]
visible = false
position = Vector2(712, 170)

[node name="Joueur" parent="." instance=ExtResource("3_6onxo")]
position = Vector2(361, 203)
scale = Vector2(1.5, 1.5)

[node name="sortie" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="sortie"]
position = Vector2(321, 243)
shape = SubResource("RectangleShape2D_nqmja")

[node name="BlockagePorte" type="StaticBody2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlockagePorte"]
position = Vector2(339, 242)
shape = SubResource("RectangleShape2D_lvqbf")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="BlockagePorte"]
position = Vector2(379.625, 241)
shape = SubResource("RectangleShape2D_t3n6p")

[node name="bossCollision" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="bossCollision"]
position = Vector2(705, 183)
shape = SubResource("RectangleShape2D_nuhb8")

[node name="f" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(698, 87)
scale = Vector2(2, 2)
texture = ExtResource("6_yhl5l")
hframes = 8
vframes = 14
frame = 21

[node name="Zone" type="Node2D" parent="."]

[node name="ZoneBoss" type="Area2D" parent="Zone"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Zone/ZoneBoss"]
position = Vector2(669, 184)
shape = SubResource("RectangleShape2D_0vmct")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Zone/ZoneBoss"]
position = Vector2(698, 219.25)
shape = SubResource("RectangleShape2D_g045e")

[node name="MenuBoss" type="Node2D" parent="."]
visible = false

[node name="Tuile_boite_de_texte" parent="MenuBoss" instance=ExtResource("6_hl0ms")]
position = Vector2(-55, -40)
scale = Vector2(2.2, 2.2)
layer_0/tile_data = PackedInt32Array(786447, 393217, 10, 851983, 393217, 11, 786448, 458753, 10, 851984, 458753, 11, 786449, 524289, 10, 851985, 524289, 11, 786450, 589825, 10, 851986, 589825, 11, 786451, 655361, 10, 851987, 655361, 11, 786452, 720897, 10, 851988, 720897, 11, 720911, 393217, 10, 720912, 458753, 10, 720913, 524289, 10, 720914, 589825, 10, 720915, 655361, 10, 720916, 720897, 10, 655375, 393217, 10, 655376, 458753, 10, 655377, 524289, 10, 655378, 589825, 10, 655379, 655361, 10, 655380, 720897, 10, 589839, 393217, 10, 589840, 458753, 10, 589841, 524289, 10, 589842, 589825, 10, 589843, 655361, 10, 589844, 720897, 10, 524303, 393217, 10, 524304, 458753, 10, 524305, 524289, 10, 524306, 589825, 10, 524307, 655361, 10, 524308, 720897, 10, 458767, 393217, 10, 458768, 458753, 10, 458769, 524289, 10, 458770, 589825, 10, 458771, 655361, 10, 458772, 720897, 10, 393231, 1310721, 10, 393232, 1376257, 10, 393233, 1441793, 10, 393234, 65537, 24, 393235, 131073, 24, 393236, 196609, 24)

[node name="btnRetour" type="Button" parent="MenuBoss"]
offset_left = 599.0
offset_top = 397.0
offset_right = 660.0
offset_bottom = 428.0
text = "Retour
"

[node name="btnCombattre" type="Button" parent="MenuBoss"]
offset_left = 497.0
offset_top = 397.0
offset_right = 589.0
offset_bottom = 428.0
disabled = true
text = "Combattre"

[node name="Label" type="Label" parent="MenuBoss"]
offset_left = 532.0
offset_top = 189.0
offset_right = 627.0
offset_bottom = 215.0
text = "Boo : Martin"

[node name="Label2" type="Label" parent="MenuBoss"]
offset_left = 543.0
offset_top = 204.0
offset_right = 618.0
offset_bottom = 230.0
text = "Prérequis"

[node name="IconCerveau" type="Sprite2D" parent="MenuBoss"]
texture_filter = 1
position = Vector2(521, 261)
texture = ExtResource("7_850wn")

[node name="Horloge" type="Sprite2D" parent="MenuBoss"]
position = Vector2(523, 314)
scale = Vector2(0.5, 0.5)
texture = ExtResource("8_60xhm")

[node name="TextEdit" type="TextEdit" parent="MenuBoss"]
offset_left = 552.0
offset_top = 245.0
offset_right = 649.0
offset_bottom = 280.0
text = "Niveau 4+"
editable = false

[node name="TextEdit2" type="TextEdit" parent="MenuBoss"]
offset_left = 550.0
offset_top = 297.0
offset_right = 649.0
offset_bottom = 334.0
text = "Temps à 0"
editable = false

[node name="BoiteDeTextes" parent="." instance=ExtResource("10_grhnv")]

[connection signal="sauvegarder" from="MenuPause" to="Joueur" method="_on_menu_pause_sauvegarder"]
[connection signal="body_entered" from="sortie" to="." method="_on_sortie_body_entered"]
[connection signal="body_entered" from="Zone/ZoneBoss" to="." method="_on_zone_boss_body_entered"]
[connection signal="body_exited" from="Zone/ZoneBoss" to="." method="_on_zone_boss_body_exited"]
[connection signal="pressed" from="MenuBoss/btnRetour" to="." method="_on_btn_retour_pressed"]
[connection signal="pressed" from="MenuBoss/btnCombattre" to="." method="_on_btn_combattre_pressed"]
